--- a/ng-first-app/src/app/app.component.html
+++ b/ng-first-app/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Hello world!</h1>
-
-<router-outlet></router-outlet>
+<main>
+  <header class="brand-name">
+    <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true">
+  </header>
+  <section class="content">
+    <app-home></app-home>
+  </section>
+</main>
